Fix tablet hero CTA spacing

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -820,6 +820,21 @@ a {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .homecontainer > .aboutintro.hp.herohp .flex-block-7 {
+    flex-wrap: nowrap !important;
+    width: fit-content !important;
+    max-width: 100%;
+    margin-right: auto !important;
+    margin-left: auto !important;
+  }
+
+  .homecontainer > .aboutintro.hp.herohp .splitpara.jhppara.smallpara {
+    max-width: 24rem;
+    margin: 0 !important;
+  }
+}
+
 .homecontainer > .aboutintro.hp.herohp .splitpara.jhppara.smallpara > br:last-of-type {
   display: none;
 }
